--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body{
-    background-color: blue;
-    color:rgb(226, 13, 180);
-    font-family:"Pixelify Sans", sans-serif;
+body {
+    background-color: #1D4221;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,10 +9,10 @@ body{
     margin: 0;
 }
 
-button{
-    background-color: blue;
-    color: rgb(225, 20, 146);
-    font-family:"Pixelify Sans", sans-serif;
+button {
+    background-color: #64A712;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
 }
 
 .passo {
@@ -21,4 +21,13 @@ button{
 
 .passo.ativo {
     display:block;
+}
+
+main {
+    text-align: center;
+    max-width: 90%;
+}
+
+img {
+    max-width: 90%;
 }
